--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,12 @@ select {
 	}
 }
 
-/* NAVIGATION */
+/* NAVIGATION (positioning top/bottom is written in JS) */
 
 nav {
 	opacity: .9;
 	width: 100%;
 	position: fixed;
-	top: 1.8rem;
 	background-color: black;
 	padding: 0 1rem;
 	color: white;
@@ -111,31 +110,42 @@ nav a {
 #menu-mobile {
 	display: none;
 }
-#menu-mobile img {
+/* #menu-mobile img {
 	width: 1.5rem;
-}
+} */
 
 @media only screen and (max-width: 600px) {
 	nav {
-		top: 550px;
-		bottom: 0;
+		opacity: 1;
+		padding: .5rem .2rem;
+	}
+	nav a {
+		padding: .3rem;
 	}
 	.wrapper.navi {
 		display: flex;
+		flex-direction: row;
 		justify-content: space-between;
-		flex-direction: column-reverse;
+		height: 2rem;
 	}
 	.menu {
+		font-size: 1rem;
+	}
+	.logo {
 		display: none;
 	}
 	#menu-mobile {
-		display: block;
+		font-size: 1rem;
+		display: inline-block;
+	}
+	#menu-mobile a {
+		color: darkorange;
 	}
 }
 
 /* SUBMENU */
 
-.submenu {
+#subMenu {
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -148,17 +158,17 @@ nav a {
 	display: none;
 }
 @media only screen and (max-width: 600px) {
-	.submenu {
+	#subMenu {
 		position: static;
+		font-size: 1rem;
 	}
-	.submenu .container .wrapper {
+	#subMenu .container .wrapper {
 		display: flex;
 		flex-direction: column;
 	}
 	.shuttle-bar {
 		text-align: center;
-		font-size: 1rem;
-		margin-bottom: 1rem;
+		margin: .5rem;
 	}
 	.show-mobile {
 		display: block;
