--- a/css/style.css
+++ b/css/style.css
@@ -146,8 +146,8 @@ nav a {
 /* SUBMENU */
 
 #subMenu {
+	font-size: 1rem;
 	position: fixed;
-	top: 0;
 	width: 100%;
 	background-color: #353535;
 	color: white;
